--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -2,7 +2,9 @@
   font-size: 10px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   --dark: #1f1f1f;
+  --card-dark: #1d1d1d;
   --light: #f1f1f1;
+  --card-light: #d1d1d1;
   --teal: #1fb8b8;
   --ruby: #950e45;
 }
@@ -32,26 +34,37 @@ body {
   place-items: center;
 }
 
-.container,
-.card {
+.container {
   background-color: var(--dark);
 }
-#light .container,
-#light .card {
+.card {
+  background-color: var(--card-dark);
+}
+#light .container {
   background-color: var(--light);
+}
+#light .card {
+  background-color: var(--card-light);
 }
 
 .theme-toggle {
   position: absolute;
-  top: 4rem;
-  right: 4rem;
+  top: 2rem;
+  right: 2rem;
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 1rem;
   color: var(--light);
   background-color: var(--dark);
   border: 2px solid var(--light);
   padding: 1rem;
   border-radius: 1rem;
+
+  transition: transform 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    color 0.15s ease-in-out;
+}
+
+.theme-toggle:hover {
+  transform: scale(1.05);
 }
 
 #light .theme-toggle {
@@ -96,33 +109,29 @@ body {
 
 .show-weather-button {
   margin-top: auto;
+  width: 75%;
   cursor: pointer;
   border: 2px solid var(--teal);
   background-color: var(--dark);
   color: var(--teal);
-  float: right;
 
   transition: transform 0.15s ease-in-out, border-color 0.15s ease-in-out,
     color 0.15s ease-in-out;
 }
 
 #light .show-weather-button {
-  background-color: var(--light);
+  background-color: var(--card-light);
 }
 
-.show-weather-button:hover,
-.show-weather-button:focus {
+.show-weather-button:hover {
   background-color: var(--light);
   color: var(--dark);
   border-color: var(--light);
   transform: scale(1.05);
 }
 
-#light .show-weather-button:hover,
-#light .show-weather-button:focus {
-  background-color: var(--dark);
-  color: var(--light);
-  border-color: var(--dark);
+#light .show-weather-button:hover {
+  background-color: var(--light);
 }
 
 .weather-container {
@@ -180,6 +189,14 @@ body {
     min-width: 80vw;
     min-height: auto;
     aspect-ratio: 5 / 3;
+  }
+  .theme-toggle {
+    top: 4rem;
+    right: 4rem;
+    font-size: 2rem;
+  }
+  .show-weather-button {
+    font-size: 2rem;
   }
 }
 
